<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@color/background">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/icon"
            android:id="@+id/logoIMG" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" android:contentDescription="@string/app_name"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/linearLayout" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.779">
        <Button
                android:text="@string/light"
                android:layout_width="match_parent"
                android:layout_height="125dp" android:id="@+id/lightBtn" android:background="@drawable/buttons"
                android:textColor="@android:color/white" android:textSize="18sp"/>
        <Button
                android:text="@string/computer"
                android:layout_width="match_parent"
                android:layout_height="125dp" android:id="@+id/zigapcBtn" android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" android:background="@drawable/buttons"
                android:textColor="@android:color/white" android:textSize="18sp"/>
        <Button
                android:text="@string/garage"
                android:layout_width="match_parent"
                android:layout_height="125dp" android:id="@+id/garazaBtn" android:background="@drawable/buttons"
                android:textColor="@android:color/white" android:textSize="18sp"/>
    </LinearLayout>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" android:textColor="@android:color/white"
            android:textSize="30sp" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.373" android:textStyle="bold"/>
    <TextView
            android:text="@string/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:textColor="@android:color/white"
            android:textSize="16sp" app:layout_constraintHorizontal_bias="0.49" android:textStyle="italic"/>
    <TextView
            tools:text="v1.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/versionTxt" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@android:color/white"/>
</android.support.constraint.ConstraintLayout>