<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity" android:background="@color/background">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/icon"
            android:id="@+id/logoIMG" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" android:contentDescription="@string/app_name"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintVertical_bias="0.120000005" android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/finger_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:textColor="@android:color/white"
            android:textSize="16sp" app:layout_constraintHorizontal_bias="0.49" android:textStyle="italic"
    />
    <Button
            android:text="@string/retryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/retryBiometricBtn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="64dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:background="@drawable/error_btn"/>
    <TextView
            android:text="@string/hidden_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:textColor="@android:color/white" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/retryBiometricBtn"/>

</androidx.constraintlayout.widget.ConstraintLayout>